--- a/app/src/main/res/layout/activity_myself.xml
+++ b/app/src/main/res/layout/activity_myself.xml
@@ -118,7 +118,7 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="将作为登陆的唯一ID"
+                android:hint="用户名"
 
                 android:orientation="vertical">
 
@@ -134,7 +134,7 @@
                 android:layout_marginTop="15dp"
                 android:hint="密码"
                 android:orientation="vertical">
-
+    
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/user_input_psd"
                     android:layout_width="match_parent"
@@ -189,19 +189,19 @@
         android:id="@+id/layout_3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/log_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:layout_marginRight="40dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginRight="44dp"
             android:text="退出登录"
             android:textColor="@color/gloss"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold|italic"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
