--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,11 @@
     android:id="@+id/scroll_bar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
     android:overScrollMode="never"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
-    android:focusableInTouchMode="true"
     tools:context=".activity.MainActivity">
 
 
@@ -127,6 +127,11 @@
                 </FrameLayout>
             </LinearLayout>
         </android.support.v7.widget.CardView>
-    </LinearLayout>
 
+        <FrameLayout
+            android:id="@+id/fragment_select"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp" />
+    </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
