--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,104 +29,111 @@
             android:focusable="true"
             android:padding="10dp"
             android:src="@drawable/menu" />
-        <!--头部信息-->
-        <android.support.v7.widget.CardView
-            android:id="@+id/head_view"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="50dp"
-            android:elevation="4dp"
-            app:cardCornerRadius="10dp">
 
-
-            <TextView
-                android:id="@+id/enddate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="20dp"
-                android:text="1232131321"
-                android:textColor="@color/secondary_text"
-                android:textSize="28sp"
-                android:textStyle="bold" />
-        </android.support.v7.widget.CardView>
-
-        <!--前景照片-->
-        <android.support.v7.widget.CardView
-            android:id="@+id/main_view"
+        <LinearLayout
+            android:id="@+id/middle_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="4dp"
-            app:cardCornerRadius="10dp">
-
-            <ImageView
-                android:id="@+id/main_pic"
+            android:orientation="vertical">
+            <!--头部信息-->
+            <android.support.v7.widget.CardView
+                android:id="@+id/head_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@drawable/loading_" />
-        </android.support.v7.widget.CardView>
-        <!--尾部信息-->
-        <android.support.v7.widget.CardView
-            android:id="@+id/info_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="4dp"
-            app:cardCornerRadius="10dp">
+                android:layout_height="50dp"
+                android:layout_marginTop="50dp"
+                android:elevation="4dp"
+                app:cardCornerRadius="10dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="10dp"
-                android:paddingTop="10dp"
-                android:paddingRight="10dp">
 
                 <TextView
+                    android:id="@+id/enddate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="版权来源"
-                    android:textColor="@color/primary_text"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/copyright"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="20dp"
+                    android:text="1232131321"
                     android:textColor="@color/secondary_text"
-                    android:textSize="16sp" />
+                    android:textSize="28sp"
+                    android:textStyle="bold" />
+            </android.support.v7.widget.CardView>
 
-                <FrameLayout
+            <!--前景照片-->
+            <android.support.v7.widget.CardView
+                android:id="@+id/main_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="4dp"
+                app:cardCornerRadius="10dp">
+
+                <ImageView
+                    android:id="@+id/main_pic"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp">
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/loading_" />
+            </android.support.v7.widget.CardView>
+            <!--尾部信息-->
+            <android.support.v7.widget.CardView
+                android:id="@+id/info_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="4dp"
+                app:cardCornerRadius="10dp">
 
-                    <ImageView
-                        android:id="@+id/like_it"
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:background="@drawable/selector_btn"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:padding="10dp"
-                        android:src="@drawable/icon_shoucang" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp">
 
-                    <ImageView
-                        android:id="@+id/hate_it"
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:layout_gravity="end"
-                        android:background="@drawable/selector_btn"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:padding="10dp"
-                        android:src="@drawable/icon_yincang" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="版权来源"
+                        android:textColor="@color/primary_text"
+                        android:textSize="16sp" />
 
-                </FrameLayout>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+                    <TextView
+                        android:id="@+id/copyright"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/secondary_text"
+                        android:textSize="16sp" />
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp">
+
+                        <ImageView
+                            android:id="@+id/like_it"
+                            android:layout_width="45dp"
+                            android:layout_height="45dp"
+                            android:background="@drawable/selector_btn"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:padding="10dp"
+                            android:src="@drawable/icon_shoucang" />
+
+                        <ImageView
+                            android:id="@+id/hate_it"
+                            android:layout_width="45dp"
+                            android:layout_height="45dp"
+                            android:layout_gravity="end"
+                            android:background="@drawable/selector_btn"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:padding="10dp"
+                            android:src="@drawable/icon_yincang" />
+
+                    </FrameLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
 
         <FrameLayout
             android:id="@+id/fragment_select"
